add java_advanced chapt9 part2